src/objects/Eco_Fee_State__c.object
<CustomObject>
    <fields>
        <fullName>Per_5_Gallon__c</fullName>
        <defaultValue>1.60</defaultValue>
        <label>Per 5 Gallon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Gallon__c</fullName>
        <defaultValue>0.75</defaultValue>
        <label>Per 1 Gallon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Eco Fee State</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Eco Fee State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eco Fee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>